--- a/composer.json
+++ b/composer.json
@@ -12,6 +12,13 @@
             "homepage": "http://www.krajee.com/"
         }
     ],
+	"repositories": [
+    {
+        "type": "composer",
+        "url": "https://asset-packagist.org"
+    }
+		],
+	
 	"support": {
         "issues": "https://github.com/yiisoft/yii2/issues?state=open",
         "forum": "http://www.yiiframework.com/forum/",
@@ -24,7 +31,9 @@
         "php": ">=5.4.0",
         "yiisoft/yii2": ">=2.0.5",
         "yiisoft/yii2-bootstrap": "*",
-        "yiisoft/yii2-swiftmailer": "*"
+        "yiisoft/yii2-swiftmailer": "*",
+		"bower-asset/bootstrap": "^3.3",
+    "npm-asset/jquery": "^2.2"
     },
     "require-dev": {
         "yiisoft/yii2-codeception": "*",
