--- a/.gitignore
+++ b/.gitignore
@@ -19,6 +19,16 @@ Thumbs.db
 # composer vendor dir
 /vendor
 
+# you can skip this first one if it is not already excluded by prior patterns
+
+
+vendor/*
+!vendor/yiisoft/
+
+vendor/yiisoft/*
+!vendor/yiisoft/extensions.php
+
+
 # composer itself is not needed
 composer.phar
 
